test/ll_parser_input_test.test
START-OF-FILE: line #:
// Layered Languages Standard Lexical Analyzer Test Data
^
INDENT: line #:
// Layered Languages Standard Lexical Analyzer Test Data
^
COMMENT: line #:
// Layered Languages Standard Lexical Analyzer Test Data
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE-BREAK: line #:
// Layered Languages Standard Lexical Analyzer Test Data
                                                        ^
INDENT: line #:
//
^
COMMENT: line #:
//
^^
LINE-BREAK: line #:
//
  ^
INDENT: line #:
// File:        ll_lexeme_standard_test.in
^
COMMENT: line #:
// File:        ll_lexeme_standard_test.in
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE-BREAK: line #:
// File:        ll_lexeme_standard_test.in
                                          ^
INDENT: line #:
// Author:      Bob Walton (walton@acm.org)
^
COMMENT: line #:
// Author:      Bob Walton (walton@acm.org)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE-BREAK: line #:
// Author:      Bob Walton (walton@acm.org)
                                           ^
INDENT: line #:
// Date:        Sun May 30 17:19:12 EDT 2021
^
COMMENT: line #:
// Date:        Sun May 30 17:19:12 EDT 2021
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE-BREAK: line #:
// Date:        Sun May 30 17:19:12 EDT 2021
                                            ^
INDENT: line #:
//
^
COMMENT: line #:
//
^^
LINE-BREAK: line #:
//
  ^
INDENT: line #:
// The authors have placed this data in the public
^
COMMENT: line #:
// The authors have placed this data in the public
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE-BREAK: line #:
// The authors have placed this data in the public
                                                  ^
INDENT: line #:
// domain; they make no warranty and accept no liability
^
COMMENT: line #:
// domain; they make no warranty and accept no liability
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE-BREAK: line #:
// domain; they make no warranty and accept no liability
                                                        ^
INDENT: line #:
// for this data.
^
COMMENT: line #:
// for this data.
^^^^^^^^^^^^^^^^^
LINE-BREAK: line #:
// for this data.
                 ^
LINE-BREAK: line ##:
<BLANK-LINE>
^
INDENT: line ##:
abc 3.4+z (x,y)
^
WORD: "abc": line ##:
abc 3.4+z (x,y)
^^^
NUMERIC: "3.4+z": line ##:
abc 3.4+z (x,y)
    ^^^^^
SEPARATOR: "(": line ##:
abc 3.4+z (x,y)
          ^
WORD: "x,y": line ##:
abc 3.4+z (x,y)
           ^^^
SEPARATOR: ")": line ##:
abc 3.4+z (x,y)
              ^
LINE-BREAK: line ##:
abc 3.4+z (x,y)
               ^
INDENT: line ##:
"hi" "ho<HT>x y<>z<LF>"
^
QUOTED-STRING: "hi": line ##:
"hi" "ho<HT>x y<>z<LF>"
^^^^
QUOTED-STRING: "ho␉x␣y<>z␊": line ##:
"hi" "ho<HT>x y<>z<LF>"
     ^^^^^^^^^^^^^^^^^^
LINE-BREAK: line ##:
"hi" "ho<HT>x y<>z<LF>"
                       ^
INDENT: line ##:
'tis noth'ng `but' a h'dache.
^
WORD: "'tis": line ##:
'tis noth'ng `but' a h'dache.
^^^^
WORD: "noth'ng": line ##:
'tis noth'ng `but' a h'dache.
     ^^^^^^^
SEPARATOR: "`": line ##:
'tis noth'ng `but' a h'dache.
             ^
WORD: "but": line ##:
'tis noth'ng `but' a h'dache.
              ^^^
SEPARATOR: "'": line ##:
'tis noth'ng `but' a h'dache.
                 ^
WORD: "a": line ##:
'tis noth'ng `but' a h'dache.
                   ^
WORD: "h'dache": line ##:
'tis noth'ng `but' a h'dache.
                     ^^^^^^^
SEPARATOR: ".": line ##:
'tis noth'ng `but' a h'dache.
                            ^
LINE-BREAK: line ##:
'tis noth'ng `but' a h'dache.
                             ^
INDENT: line ##:
a.1.2.3..b...c e5f x7+y6(5z) 2018-may-02 2018/05/02
^
WORD: "a.1.2.3..b...c": line ##:
a.1.2.3..b...c e5f x7+y6(5z) 2018-may-02 2018/05/02
^^^^^^^^^^^^^^
WORD: "e5f": line ##:
a.1.2.3..b...c e5f x7+y6(5z) 2018-may-02 2018/05/02
               ^^^
WORD: "x7+y6": line ##:
a.1.2.3..b...c e5f x7+y6(5z) 2018-may-02 2018/05/02
                   ^^^^^
SEPARATOR: "(": line ##:
a.1.2.3..b...c e5f x7+y6(5z) 2018-may-02 2018/05/02
                        ^
NUMERIC: "5z": line ##:
a.1.2.3..b...c e5f x7+y6(5z) 2018-may-02 2018/05/02
                         ^^
SEPARATOR: ")": line ##:
a.1.2.3..b...c e5f x7+y6(5z) 2018-may-02 2018/05/02
                           ^
NUMERIC: "2018-may-02": line ##:
a.1.2.3..b...c e5f x7+y6(5z) 2018-may-02 2018/05/02
                             ^^^^^^^^^^^
NUMERIC: "2018/05/02": line ##:
a.1.2.3..b...c e5f x7+y6(5z) 2018-may-02 2018/05/02
                                         ^^^^^^^^^^
LINE-BREAK: line ##:
a.1.2.3..b...c e5f x7+y6(5z) 2018-may-02 2018/05/02
                                                   ^
INDENT: line ##:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
^
NUMBER: 12.3: line ##:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
^^^^
NUMBER: 0.4: line ##:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
     ^^
NATURAL: 5: line ##:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
        ^
SEPARATOR: ".": line ##:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
         ^
NUMERIC: "6/7": line ##:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
           ^^^
NATURAL: 2: line ##:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
               ^
SEPARATOR: "|": line ##:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
                ^
NATURAL: 3: line ##:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
                 ^
SEPARATOR: "||": line ##:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
                  ^^
NUMERIC: "4:5::6:A:B": line ##:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
                    ^^^^^^^^^^
SEPARATOR: ":": line ##:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
                              ^
LINE-BREAK: line ##:
12.3 .4 5. 6/7 2|3||4:5::6:A:B:
                               ^
INDENT: line ##:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
^
NUMERIC: "1,23,456": line ##:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
^^^^^^^^
NUMERIC: "1,234/6,789": line ##:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
         ^^^^^^^^^^^
NUMERIC: "1/2/3/4,5/6,7,8/9": line ##:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
                     ^^^^^^^^^^^^^^^^^
NUMERIC: "8888.12,3,4": line ##:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
                                       ^^^^^^^^^^^
LINE-BREAK: line ##:
1,23,456 1,234/6,789 1/2/3/4,5/6,7,8/9 8888.12,3,4
                                                  ^
INDENT: line ##:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
^
NUMERIC: "/3": line ##:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
^^
NUMERIC: "6.34.56/": line ##:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
   ^^^^^^^^
NATURAL: 3: line ##:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
            ^
SEPARATOR: ",": line ##:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
             ^
NATURAL: 4: line ##:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
               ^
SEPARATOR: ",": line ##:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
                ^
NUMERIC: ",5": line ##:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
                  ^^
NUMERIC: ",6.7,8.9": line ##:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
                     ^^^^^^^^
NUMERIC: "'05": line ##:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
                              ^^^
NUMERIC: "'1'2'3'4": line ##:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
                                  ^^^^^^^^
SEPARATOR: "'": line ##:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
                                          ^
LINE-BREAK: line ##:
/3 6.34.56/ 3, 4, ,5 ,6.7,8.9 '05 '1'2'3'4'
                                           ^
INDENT: line ##:
+-*~@#$%^&=<>_!?./:"foo"x<79><LF>
^
MARK: "+-*~@#$%^&=<>_!?./": line ##:
+-*~@#$%^&=<>_!?./:"foo"x<79><LF>
^^^^^^^^^^^^^^^^^^
SEPARATOR: ":": line ##:
+-*~@#$%^&=<>_!?./:"foo"x<79><LF>
                  ^
QUOTED-STRING: "foo": line ##:
+-*~@#$%^&=<>_!?./:"foo"x<79><LF>
                   ^^^^^
WORD: "x<79><LF>": line ##:
+-*~@#$%^&=<>_!?./:"foo"x<79><LF>
                        ^^^^^^^^^
LINE-BREAK: line ##:
+-*~@#$%^&=<>_!?./:"foo"x<79><LF>
                                 ^
INDENT: line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
^
WORD: ".foo": line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
^^^^
WORD: "/foo": line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
     ^^^^
WORD: "..foo": line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
          ^^^^^
MARK: ".=": line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                ^^
NUMERIC: "3/x": line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                   ^^^
WORD: "x/3": line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                       ^^^
NUMERIC: "3.x": line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                           ^^^
WORD: "x.3//": line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                               ^^^^^
WORD: "comment": line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                                     ^^^^^^^
NUMERIC: "<89>": line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                                             ^^^^
QUOTED-STRING: "'": line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                                                  ^^
ERROR: string ended by line break or end of file; line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                                                    ^
LINE-BREAK: line ##:
.foo /foo ..foo .= 3/x x/3 3.x x.3// comment <89> "'
                                                    ^
INDENT: line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'' *PARSER* *TEST*:
^
WORD: "a": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'' *PARSER* *TEST*:
^
SEPARATOR: "(": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'' *PARSER* *TEST*:
 ^
WORD: "b,c": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'' *PARSER* *TEST*:
  ^^^
SEPARATOR: ")": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'' *PARSER* *TEST*:
     ^
WORD: "d": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'' *PARSER* *TEST*:
       ^
SEPARATOR: "{": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'' *PARSER* *TEST*:
        ^
WORD: "e;f": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'' *PARSER* *TEST*:
         ^^^
SEPARATOR: "}": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'' *PARSER* *TEST*:
            ^
WORD: "g": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'' *PARSER* *TEST*:
              ^
SEPARATOR: "[": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'' *PARSER* *TEST*:
               ^
WORD: "h,i": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'' *PARSER* *TEST*:
                ^^^
SEPARATOR: "]": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'' *PARSER* *TEST*:
                   ^
SEPARATOR: "``": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'' *PARSER* *TEST*:
                     ^^
WORD: "foobar": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'' *PARSER* *TEST*:
                       ^^^^^^
SEPARATOR: "'": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'' *PARSER* *TEST*:
                             ^
WORD: "fum": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'' *PARSER* *TEST*:
                               ^^^
SEPARATOR: "''": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'' *PARSER* *TEST*:
                                  ^^
WORD: "*PARSER*": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'' *PARSER* *TEST*:
                                     ^^^^^^^^
WORD: "*TEST*": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'' *PARSER* *TEST*:
                                              ^^^^^^
SEPARATOR: ":": line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'' *PARSER* *TEST*:
                                                    ^
LINE-BREAK: line ##:
a(b,c) d{e;f} g[h,i] ``foobar' fum'' *PARSER* *TEST*:
                                                     ^
INDENT: line ##:
// form feed ␌
^
COMMENT: line ##:
// form feed ␌
^^^^^^^^^^^^^
LINE-BREAK: line ##:
// form feed ␌
             ^
INDENT: line ##:
// vertical tab ␋
^
COMMENT: line ##:
// vertical tab ␋
^^^^^^^^^^^^^^^^
LINE-BREAK: line ##:
// vertical tab ␋
                ^
INDENT: line ##:
// carriage return ␍
^
COMMENT: line ##:
// carriage return ␍
^^^^^^^^^^^^^^^^^^^
LINE-BREAK: line ##:
// carriage return ␍
                   ^
INDENT: line ##:
z       x // horizontal tab
^
WORD: "z": line ##:
z       x // horizontal tab
^
WORD: "x": line ##:
z       x // horizontal tab
        ^
COMMENT: line ##:
z       x // horizontal tab
          ^^^^^^^^^^^^^^^^^
LINE-BREAK: line ##:
z       x // horizontal tab
                           ^
INDENT: line ##:
all     ␌␋␍
^
WORD: "all": line ##:
all     ␌␋␍
^^^
LINE-BREAK: line ##:
all     ␌␋␍
        ^^^
INDENT: line ##:
control A␁B␂C␃
^
WORD: "control": line ##:
control A␁B␂C␃
^^^^^^^
WORD: "A": line ##:
control A␁B␂C␃
        ^
ERROR: illegal control character sequence; line ##:
control A␁B␂C␃
         ^
WORD: "B": line ##:
control A␁B␂C␃
          ^
ERROR: illegal control character sequence; line ##:
control A␁B␂C␃
           ^
WORD: "C": line ##:
control A␁B␂C␃
            ^
ERROR: illegal control character sequence; line ##:
control A␁B␂C␃
             ^
LINE-BREAK: line ##:
control A␁B␂C␃
              ^
INDENT: line ##:
"<Q><LF><CR><HT><BS><FF><VT><XX><SP><0E2><1>"
^
ERROR: in line ##: unrecognized escape sequence:
"<Q><LF><CR><HT><BS><FF><VT><XX><SP><0E2><1>"
                            ^^^^
QUOTED-STRING: "<Q>␊␍␉␈␌␋␥␣â␁": line ##:
"<Q><LF><CR><HT><BS><FF><VT><XX><SP><0E2><1>"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE-BREAK: line ##:
"<Q><LF><CR><HT><BS><FF><VT><XX><SP><0E2><1>"
                                             ^
INDENT: line ##:
"<0041><00000042>C D<00000045><0046>G"
^
QUOTED-STRING: "ABC␣DEFG": line ##:
"<0041><00000042>C D<00000045><0046>G"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE-BREAK: line ##:
"<0041><00000042>C D<00000045><0046>G"
                                      ^
INDENT: line ##:
"<0041><000000B5>C D<000000E3><0006>G"
^
QUOTED-STRING: "AµC␣Dã␆G": line ##:
"<0041><000000B5>C D<000000E3><0006>G"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE-BREAK: line ##:
"<0041><000000B5>C D<000000E3><0006>G"
                                      ^
INDENT: line ##:
"<0001>"
^
QUOTED-STRING: "␁": line ##:
"<0001>"
^^^^^^^^
LINE-BREAK: line ##:
"<0001>"
        ^
INDENT: line ##:
"<NUL><SOH><STX><ETX><EOT><ENQ><ACK><BEL>"
^
QUOTED-STRING: "␀␁␂␃␄␅␆␇": line ##:
"<NUL><SOH><STX><ETX><EOT><ENQ><ACK><BEL>"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE-BREAK: line ##:
"<NUL><SOH><STX><ETX><EOT><ENQ><ACK><BEL>"
                                          ^
INDENT: line ##:
"<BS><HT><LF><NL><VT><FF><CR><SO><SI>"
^
QUOTED-STRING: "␈␉␊␊␋␌␍␎␏": line ##:
"<BS><HT><LF><NL><VT><FF><CR><SO><SI>"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE-BREAK: line ##:
"<BS><HT><LF><NL><VT><FF><CR><SO><SI>"
                                      ^
INDENT: line ##:
"<DLE><DC1><DC2><DC3><DC4><NAK><SYN><ETB>"
^
QUOTED-STRING: "␐␑␒␓␔␕␖␗": line ##:
"<DLE><DC1><DC2><DC3><DC4><NAK><SYN><ETB>"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE-BREAK: line ##:
"<DLE><DC1><DC2><DC3><DC4><NAK><SYN><ETB>"
                                          ^
INDENT: line ##:
"<CAN><EOM><SUB><ESC><FS><GS><RS><US><DEL>"
^
QUOTED-STRING: "␘␙␚␛␜␝␞␟␡": line ##:
"<CAN><EOM><SUB><ESC><FS><GS><RS><US><DEL>"
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE-BREAK: line ##:
"<CAN><EOM><SUB><ESC><FS><GS><RS><US><DEL>"
                                           ^
INDENT: line ##:
"misplaced control ␁"
^
ERROR: in line ##: illegal control character sequence:
"misplaced control ␁"
                   ^
QUOTED-STRING: "misplaced␣control␣␁": line ##:
"misplaced control ␁"
^^^^^^^^^^^^^^^^^^^^^
LINE-BREAK: line ##:
"misplaced control ␁"
                     ^
INDENT: line ##:
misplaced space ␌ here and ␍ here
^
WORD: "misplaced": line ##:
misplaced space ␌ here and ␍ here
^^^^^^^^^
WORD: "space": line ##:
misplaced space ␌ here and ␍ here
          ^^^^^
ERROR: vertical control character sequence with no line feed; line ##:
misplaced space ␌ here and ␍ here
                ^
WORD: "here": line ##:
misplaced space ␌ here and ␍ here
                  ^^^^
WORD: "and": line ##:
misplaced space ␌ here and ␍ here
                       ^^^
ERROR: vertical control character sequence with no line feed; line ##:
misplaced space ␌ here and ␍ here
                           ^
WORD: "here": line ##:
misplaced space ␌ here and ␍ here
                             ^^^^
LINE-BREAK: line ##:
misplaced space ␌ here and ␍ here
                                 ^
INDENT: line ##:
=<9=<8
^
NUMERIC: "=<9=<8": line ##:
=<9=<8
^^^^^^
LINE-BREAK: line ##:
=<9=<8
      ^
INDENT: line ##:
// blank line follows
^
COMMENT: line ##:
// blank line follows
^^^^^^^^^^^^^^^^^^^^^
LINE-BREAK: line ##:
// blank line follows
                     ^
LINE-BREAK: line ##:
<BLANK-LINE>
^
INDENT: line ##:
// blank line with spaces follows
^
COMMENT: line ##:
// blank line with spaces follows
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LINE-BREAK: line ##:
// blank line with spaces follows
                                 ^
LINE-BREAK: line ##:
<BLANK-LINE>
     ^
INDENT: line ##:
"premature end of line follows
^
QUOTED-STRING: "premature␣end␣of␣line␣follows": line ##:
"premature end of line follows
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ERROR: string ended by line break or end of file; line ##:
"premature end of line follows
                              ^
LINE-BREAK: line ##:
"premature end of line follows
                              ^
INDENT: line ##:
"premature end of file follows<END-OF-FILE>
^
QUOTED-STRING: "premature␣end␣of␣file␣follows": line ##:
"premature end of file follows<END-OF-FILE>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ERROR: string ended by line break or end of file; line ##:
"premature end of file follows<END-OF-FILE>
                              ^
ERROR: end of file not preceeded by a line break; line ##:
"premature end of file follows<END-OF-FILE>
                              ^
END-OF-FILE: line ##:
"premature end of file follows<END-OF-FILE>
                              ^
